# mm-eng-tts

./: .gitignore  README.md  app.py  building.md  data.json  fine-tune.ipynb  hello.py  myanmar.txt  prompt.txt  pyproject.toml  script.ipynb  test.txt  timestamps.txt  transcript.txt  translator.ipynb  tts.ipynb  workflow.md
transcripts/: MM-timestamp.txt  mm_text.txt  org.txt  transcript.txt  voice.txt
