[project]
name = "transcript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.3",
    "gtts>=2.5.4",
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "ipywidgets>=8.1.5",
    "munch>=4.0.0",
    "numpy>=2.1.3",
    "openai-whisper>=20240930",
    "phonemizer>=3.3.0",
    "pip>=24.3.1",
    "pydub>=0.25.1",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.0",
    "spacy>=3.8.4",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers>=4.48.1",
    "whisper>=1.1.10",
    "yt-dlp>=2025.1.15",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl",
    "spacy-curated-transformers>=0.3.0",
]

[tool.uv.workspace]
members = ["tts"]
